--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -19,7 +19,10 @@ modId="mofmc" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
-version="${file.jarVersion}" #mandatory
+
+# Remove this line and change version to "${file.jarVersion}" when done.
+version="1.18.2-1.2.0-beta.3" #mandatory
+
  # A display name for the mod
 displayName="More Ores For MC" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
@@ -37,7 +40,7 @@ description='''
 Adds in more ores, tools, and more to Minecraft.
 
 
-Version 1.2 Beta 1
+Version 1.2.0 Beta 3
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.mofmc]] #optional
