--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -20,8 +20,7 @@ modId="mofmc" #mandatory
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
 
-# Remove this line and change version to "${file.jarVersion}" when done.
-version="1.18.2-1.2.0-beta.3" #mandatory
+version="${file.jarVersion}" #mandatory
 
  # A display name for the mod
 displayName="More Ores For MC" #mandatory
