--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -20,9 +20,10 @@ modId="mofmc" #mandatory
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
 
+# ${file.jarVersion}
 version="${file.jarVersion}" #mandatory
 
- # A display name for the mod
+# A display name for the mod
 displayName="More Ores For MC" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
 #updateJSONURL="https://change.me.example.invalid/updates.json" #optional
@@ -36,10 +37,10 @@ credits="AGMPenguin, CDMTurtle" #optional
 authors="AGMPenguin" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-Adds in more ores, tools, and more to Minecraft.
+Adds in ores, tools, and more to Minecraft.
 
 
-Version 1.2.0 Beta 3
+Version 1.2.0 Beta 4 for 1.18.2.
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.mofmc]] #optional
