--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -24,7 +24,7 @@ modId="mofmc" #mandatory
 version="1.18.2-1.2.0-beta.5" #mandatory
 
 # A display name for the mod
-displayName="More Ores For MC" #mandatory
+displayName="More Ores for MC" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
 #updateJSONURL="https://change.me.example.invalid/updates.json" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
