--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.16.5-1.2.2SCARY'
+version = '1.16.5-1.2.3'
 group = 'com.agmpenguin.mofmc' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'mofmc'
 
