--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -19,7 +19,7 @@ modId= "mofmc" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
-version="1.16.5-1.2.2SCARY" #mandatory
+version="1.16.5-1.2.3" #mandatory
  # A display name for the mod
 displayName="More Ores for MC" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
@@ -35,9 +35,9 @@ authors="AGMPenguin" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
 Adds in ores, tools, and more to Minecraft.
-Very Scary.
 
-1.16.5-1.2.2SCARY
+
+1.16.5-1.2.3
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.mofmc]] #optional
