--- a/src/main/resources/data/mofmc/loot_tables/blocks/deepslate_purple_sapphire_ore.json
+++ b/src/main/resources/data/mofmc/loot_tables/blocks/deepslate_purple_sapphire_ore.json
@@ -6,7 +6,7 @@
       "entries": [
         {
           "type": "minecraft:item",
-          "name": "mofmc:deepslate_purple_sapphire_ore"
+          "name": "mofmc:raw_purple_sapphire"
         }
       ]
     }
