--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -19,7 +19,7 @@ modId="mofmc" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
-version="1.19.x-1.4" #mandatory
+version="1.19.x-1.5.0" #mandatory
  # A display name for the mod
 displayName="More Ores for MC" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
@@ -46,7 +46,7 @@ Created by AGMPenguin
 Programmed by AGMPenguin
 Textures by AGMPenguin and CDMTurtle
 
-This is More Ores For MC (MOFMC) for versions 1.19, 1.19.1, and 1.19.2. This is version 1.4 of MOFMC.
+This is More Ores For MC (MOFMC) for versions 1.19, 1.19.1, and 1.19.2. This is version 1.5.0 of MOFMC. Also... May the Fourth be with you!
 '''
 # This is a beta version of the mod. The features it currently lacks could include any of the following, any may include features not listed here:
 # - Additional Block(s)
